--- a/index.html
+++ b/index.html
@@ -2,12 +2,18 @@
 <html>
     <head>
         <title>Welcome to koukood</title>
-        <h1>Teretere123</h1>
     </head>
     <body>
-
+        <nav>
+            <a href="./index.html">Kuu</a>
+            <a href="./muusika.html">Muusika</a>
+            <a href="./kontakt.html">Kontakt</a>
+            <a href="./esinemised.html">Esinemised</a>
+        </nav>
+        <h1>Home</h1>
     </body>
     <footer>
-
+        <p>tel: +372 56246455</p>
+        <p>email: k6ukaur@gmail.com</p>
     </footer>
 </html>
