--- a/muusika.html
+++ b/muusika.html
@@ -11,6 +11,7 @@
             <a href="./esinemised.html">Esinemised</a>
         </nav>
         <h1>Muusika</h1>
+        <video src="https://www.youtube.com/watch?v=bFlNfBN10zo&list=PLV4FXvLpX7wUXrm8roXcwtjXhtdKCCkmB" controls>Video not supported</video>
     </body>
     <footer>
         <p>tel: +372 56246455</p>
