--- a/muusika.html
+++ b/muusika.html
@@ -11,7 +11,7 @@
             <a href="./esinemised.html">Esinemised</a>
         </nav>
         <h1>Muusika</h1>
-        <video src="https://youtu.be/bFlNfBN10zo?list=PLV4FXvLpX7wUXrm8roXcwtjXhtdKCCkmB" controls>Video not supported</video>
+        <video src="https://youtu.be/bFlNfBN10zo?list=PLV4FXvLpX7wUXrm8roXcwtjXhtdKCCkmB" height="240" width="320" controls>Video not supported</video>
     </body>
     <footer>
         <p>tel: +372 56246455</p>
