--- a/muusika.html
+++ b/muusika.html
@@ -11,6 +11,7 @@
             <a href="./esinemised.html">Esinemised</a>
         </nav>
         <h1>Muusika</h1>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/bFlNfBN10zo?si=fnNGVUUTFq9ZeaSr" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <video src="https://youtu.be/bFlNfBN10zo?list=PLV4FXvLpX7wUXrm8roXcwtjXhtdKCCkmB" height="240" width="320" controls>Video not supported</video>
     </body>
     <footer>
